Comment and Service endpoints added
