# app/Models/Comment.php
@@ -8,4 +8,10 @@ use Illuminate\Database\Eloquent\Model;
 class Comment extends Model
 {
     use HasFactory;
+
+    public function user()
+    {
+        return $this->hasOne(User::class, 'id', 'user_id')
+            ->select('id', 'fullname', 'username');
+    }
 }
