# storage/api-docs/api-docs.json
@@ -5,6 +5,98 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/comment": {
+            "post": {
+                "tags": [
+                    "comment"
+                ],
+                "description": "Add comment",
+                "requestBody": {
+                    "description": "Add comment",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "description",
+                                    "star",
+                                    "serviceId"
+                                ],
+                                "properties": {
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "star": {
+                                        "type": "integer"
+                                    },
+                                    "serviceId": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Add comment"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/service": {
+            "get": {
+                "tags": [
+                    "service"
+                ],
+                "description": "Get Services",
+                "responses": {
+                    "200": {
+                        "description": "Get Services"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/service/{id}": {
+            "get": {
+                "tags": [
+                    "service"
+                ],
+                "description": "Get Service By Id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Service id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get Service  By Id"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/user/change-password": {
             "post": {
                 "tags": [
@@ -18,15 +110,15 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "old_password",
-                                    "new_password"
+                                    "oldPassword",
+                                    "newPassword"
                                 ],
                                 "properties": {
-                                    "old_password": {
+                                    "oldPassword": {
                                         "type": "string",
                                         "format": "password"
                                     },
-                                    "new_password": {
+                                    "newPassword": {
                                         "type": "string",
                                         "format": "password"
                                     }
@@ -98,12 +190,12 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "full_name",
+                                    "fullname",
                                     "username",
                                     "password"
                                 ],
                                 "properties": {
-                                    "full_name": {
+                                    "fullname": {
                                         "type": "string"
                                     },
                                     "username": {
